# new_praxis_bot

./: .env.example  pyproject.toml
src/: config.py  enums.py  main.py
src/bot/: controllers.py
src/bot/handlers/: about_handlers.py  command_handlers.py  comment_redirect_handler.py  errors_handler.py  feedback_handler.py  form_handlers.py
src/bot/internal/: commands.py  keyboards.py  ngrok_whistles.py  notify_admin.py  texts.py
src/bot/middlewares/: auth_middleware.py  session_middlewares.py  updates_dumper_middleware.py
src/database/: database_connector.py  models.py  tables_helper.py
